tdf#115666 Behavior change of Navigate By when in Comment

Change-Id: I254e6a252cf96374613cc8a6fb8f139ee6d7418e